--- a/Exercicio01/nbproject/project.properties
+++ b/Exercicio01/nbproject/project.properties
@@ -54,7 +54,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=Exercicio01.JavaApplication388
+main.class=exercicio01.Exercicio01
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
