--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,5 @@
 /JavaApplication388/build/
 /Exercicio02/nbproject/private/
 /Exercicio02/build/
+/Exercicio03/nbproject/private/
+/Exercicio03/build/
