Vou excluir jaja

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,5 @@
 /Exercicio02/build/
 /Exercicio03/nbproject/private/
 /Exercicio03/build/
+/JavaApplication393/nbproject/private/
+/JavaApplication393/build/
