--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,5 @@
 /JavaApplication393/nbproject/private/
 /JavaApplication393/build/
 /Exercicio01/build/
+/Exercicio04/nbproject/private/
+/Exercicio04/build/
