--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,12 @@
 /Exercicio05/build/
 /Exercicio 06/nbproject/private/
 /Exercicio 06/build/
+/JavaApplication399/nbproject/private/
+/JavaApplication399/build/
+/ProjetoGrafico/nbproject/private/
+/ProjetoGrafico2/nbproject/private/
+/ProjetoGrafico2/build/
+/ProjetoGrafico2/dist/
+/MediaPonderada/nbproject/private/
+/MediaNotaIndice/nbproject/private/
+/MediaNotaIndice/build/
