--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,13 @@
 /MediaPonderada/nbproject/private/
 /MediaNotaIndice/nbproject/private/
 /MediaNotaIndice/build/
+/JavaApplication405/nbproject/private/
+/Exercicio07/nbproject/private/
+/Exercicio07/build/
+/JavaApplication407/nbproject/private/
+/Exercicio08/nbproject/private/
+/Exercicio08/build/
+/Exercicio09/nbproject/private/
+/Exercicio09/build/
+/Exercicio10/nbproject/private/
+/Exercicio10/build/
